Fixed sizing issues on mobile screens

--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ body{
     background-image: url(images/map-blur.png);
     background-repeat: repeat;
     width: 100%;
-    min-height: calc(100dvh -80px);
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
 #content{
@@ -190,7 +192,7 @@ textarea{
     color: white;
     background-color: forestgreen;
     display: block;
-    padding-left: 300px;
-    padding-top: 10px;
-    height: 30px;
+    text-align: center;
+    line-height: 50px;
+    height: 50px;
 }
